--- a/app/views/shared/_loglinks.html.erb
+++ b/app/views/shared/_loglinks.html.erb
@@ -1,4 +1,5 @@
 <% if user_signed_in? %>
+  <li><%= link_to "Vender", new_product_path %></li>
   <li><%= link_to "Salir", destroy_user_session_path, method: :delete %></li>
 <% else %>
   <li><%= link_to "Entrar", new_user_session_path %></li>
